...
              Row(
                mainAxisAlignment: MainAxisAlignment.end,
                children: [
                  Padding(
                    padding: const EdgeInsets.only(right: 40.0),
                    child: Text(
                      'رمز التحقق',
                      style: TextStyle(
                        fontSize: 35.0,
                        fontWeight: FontWeight.w600,
                        color: Color(0xff262262),
                        fontFamily: 'IBMPlexSansArabi',
                      ),
...
                  // continue button (it disabeld untill the code is correct )
                  child: Container(
                    width: 330,
                    height: 60,
                    alignment: Alignment.center,
                    child: Text(
                      'استمرار',
                      style: TextStyle(
                        fontSize: 24.0,
                        color: Colors.white,
                        fontFamily: 'IBMPlexSansArabic',
                        fontWeight: FontWeight.w600,
                      ),
...
