...
                          style: ElevatedButton.styleFrom(
                            primary: Color.fromRGBO(0, 167, 157, 0.99),
                          ),
                          child: Padding(
                            padding: const EdgeInsets.all(5.0),
                            child: Text(
                              'إرسال',
                              style: TextStyle(
                                fontSize: 25,
                                fontFamily: 'IBMPlexSansArabic',
                              ),
                            ),
                          ),
...
