...
                errorMessage = ' كلمة المرور غير صحيحة  *';
              });
            }
          } else {
            // Set error message for user not found
            setState(() {
              errorMessage = 'المستخدم غير موجود *';
            });
          }
        }
      } else {
        // Set error message for invalid phone number or password
        setState(() {
          errorMessage = 'رقم الجوال أو كلمة المرور غير صحيحان *';
        });
      }
    } catch (e) {
      // Set error message for other exceptions
      setState(() {
        errorMessage = 'حدث خطأ: $e';
...
                Row(
                  mainAxisAlignment: MainAxisAlignment.end,
                  children: [
                    Padding(
                      padding: const EdgeInsets.only(right: 60.0),
                      child: Text(
                        '! اهلاً بك',
                        style: TextStyle(
                            fontSize: 35.0,
                            fontWeight: FontWeight.w600,
                            color: Color(0xff262262),
                            fontFamily: 'IBMPlexSansArabi'),
                      ),
...
                  padding: const EdgeInsets.only(
                    right: 55.0,
                    left: 55.0,
                    top: 75.0,
                  ),
                  child: TextField(
                    key: Key('phoneNumberTextField'),
                    controller: _phoneNumberController,
                    onChanged: (PhoneNumber) =>
                        _validatePhoneNumber(PhoneNumber),
                    decoration: InputDecoration(
                      hintText: 'قم بإدخال رقم الجوال',
                      hintTextDirection: TextDirection.rtl,
...
                  padding: const EdgeInsets.only(
                    right: 55.0,
                    left: 55.0,
                    top: 20.0,
                  ),
                  child: TextField(
                    key: Key('passwordTextField'),
                    controller:
                        _passwordController, // Create a TextEditingController for the password field
                    onChanged: _validatePassword, // Validate as user types
                    obscureText: true, // Hide the entered password

                    decoration: InputDecoration(
...
                      // Navigate to ResetPass.dart when the text is clicked
                      Navigator.push(context,
                          MaterialPageRoute(builder: (context) => ResetPass()));
                    },
                    child: Text(
                      textAlign: TextAlign.center,
                      'هل نسيت كلمة المرور؟',
                      style: TextStyle(
                        fontSize: 20.0,
                        color: Color(0xff262262),
                        fontFamily: 'IBMPlexSansArabic',
                        decoration: TextDecoration.underline,
                        fontWeight: FontWeight.w500,
...
                    },
                    child: Container(
                      width: 435,
                      height: 60,
                      alignment: Alignment.center,
                      child: Text(
                        'تسجيل الدخول',
                        style: TextStyle(
                          fontSize: 24.0,
                          color: Colors.white,
                          fontFamily: 'IBMPlexSansArabic',
                          fontWeight: FontWeight.w600,
                        ),
...
